Importing Projects and configuring the controller